# store

./: .env.sample  README.md  blog_data.json  catalog_data.json  configs.py  dump.rdb  groups.json  pyproject.toml  utils.py
blog/: admin.py  models.py  tasks.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
blog/templatetags/: blog_tags.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill_db_action.py
catalog/migrations/: 0001_initial.py  0002_category_created_at.py  0002_product_owner.py  0003_alter_product_options_product_is_published.py
catalog/templates/catalog/: category_detail.html  category_list.html  contact.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templates/main/: contact.html  home.html  product_detail.html  products_list.html
config/: settings.py  urls.py
data/: catalog_data.json  feedbacks.json
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_company_name_user_inn.py  0003_user_token.py  0004_alter_user_inn.py  0005_alter_user_avatar_alter_user_phone.py
users/templates/users/: login.html  password_reset.html  register.html  user_form.html
